# modeling

./: .gitignore  CMakeLists.txt  main.cpp
code/: KahanFloat.cpp  KahanFloat.h  ODE.h  Vector.h  Writer.h  typedefs.h  utilities.cpp  utilities.h
code/odes/: MathPendulum.h  PhysPendulum.h  PhysPendulumFriction.h  WaveTracing.h
data/basic/: data0.csv
harmonic/: code.cpp
python/: spiral.py
records/phys_pendulum/: pendulum.cpp  pendulum.h  pendulum.py
records/phys_pendulum_friction/: pendulum.cpp  pendulum.h  pendulum.py
records/spiral/: spiral.cpp  spiral.h  spiral.py
records/wave_tracing/: tracing.cpp  tracing.h  tracing.py
spiral/: KahanFloat.cpp  KahanFloat.h  KohanFloat.cpp  KohanFloat.h  State.h  StateNew.h  array.h  code.cpp  code.h  state.cpp  state.h  state_.cpp  state_.h
spiral/python/: 1sem.py
